prevent S_meter text from getting clipped

--- a/web/openwebrx/openwebrx.css
+++ b/web/openwebrx/openwebrx.css
@@ -48,7 +48,8 @@ This file is part of OpenWebRX.
 */
 
 /* for transition compatibility with W3.CSS */
-* {
+*
+{
 	box-sizing: border-box;
 	line-height: 1.3;
 }
@@ -795,7 +796,7 @@ html, body
 {
 	border-style: solid;
 	border-color: gray;
-	border-width: 5px;
+	border-width: 4px 5px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 }
@@ -922,7 +923,8 @@ html, body
 }
 
 /* removed non-free fonts like that: */
-/*@font-face {
+/*@font-face
+{
     font-family: 'unibody_8_pro_regregular';
     src: url('gfx/unibody8pro-regular-webfont.eot');
     src: url('gfx/unibody8pro-regular-webfont.ttf');
@@ -930,7 +932,8 @@ html, body
     font-style: normal;
 }*/
 
-@font-face {
+@font-face
+{
     font-family: 'expletus-sans-medium';
     src: url('gfx/font-expletus-sans/ExpletusSans-Medium.ttf');
     font-weight: normal;
